Arreglando Dockerfile para que se puedan ver los archivos estaticos en el contenedor